[package]
edition     = "2024"
name        = "wavefile"
version     = "0.3.0"
authors     = ["John Ledbetter <john@weirdhorse.party>"]
description = "Simple wavefile parser."
keywords    = ["wav", "wavefile", "wavfile"]
license     = "MIT"
repository  = "https://github.com/ledbettj/wavefile.git"
homepage    = "https://github.com/ledbettj/wavefile.git"
exclude     = [ "fixtures/*" ]

[dependencies]
byteorder = "1.5.0"
memmap    = "0.7.0"
